# freqkv-ext

./: .gitignore  README.md  README.zh.md  pyproject.toml
docs/: EXPERIMENT_PLAN.zh.md  INNOVATIONS.md  INNOVATIONS.zh.md  MATH.md  MATH.zh.md  METHOD.md  METHOD.zh.md  RUN_EXPERIMENTS.zh.md  RUN_H100.md  RUN_H100.zh.md  RUN_LOCAL.md  RUN_LOCAL.zh.md
results/: E1 实验报告.md  E2+E3 实验报告.md  FreqKV 频谱分析实验报告.md  config.json  sparsity.json
scripts/: analyze_spectrum.py  diagnose_basis.py  diagnose_outliers.py  eval_longbench.py  eval_needle.py  eval_ppl.py  h100_run_all.sh  h100_setup.sh  rate_distortion.py  train.py
src/freqkv_ext/: __init__.py  capture.py  patch.py  rdcodecs.py  rope_utils.py  sparsity.py  spectrum.py
src/freqkv_ext/transforms/: __init__.py  dct_baseline.py  dft_lowpass.py  dft_rope_aware.py  rst_hybrid.py  wavelet.py
tests/: test_invertibility.py  test_rdcodecs.py  test_rst_transform.py  test_sparsity.py  test_transforms.py
