[project]
name = "freqkv-ext"
version = "0.1.0"
description = "DSP-extended KV cache compression: DFT (RoPE-aware) and wavelet operators as drop-in replacements for FreqKV's DCT."
authors = [
    { name = "Juqi Li", email = "2223621784@qq.com" },
]
requires-python = ">=3.10"
readme = "README.md"

# Core deps. Match FreqKV's transformers version for monkey-patch compatibility.
# Torch is intentionally left flexible: CPU wheel for local dev, CUDA wheel on H100.
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pywavelets>=1.5",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "einops>=0.7",
    "sentencepiece>=0.1.99",
    "protobuf>=4.24",
]

[project.optional-dependencies]
# Local dev / unit tests: pure CPU torch + transformers, no flash-attn.
cpu = [
    "torch>=2.1",
    "transformers==4.43.0",
    "tokenizers>=0.14",
    "datasets>=2.14",
    "accelerate>=0.23",
    "pytest>=7",
]
# H100 / full eval: adds GPU-only deps. flash-attn must be built with --no-build-isolation.
gpu = [
    "torch>=2.1",
    "transformers==4.43.0",
    "tokenizers>=0.14",
    "datasets>=2.14",
    "accelerate>=0.23",
    "peft>=0.5",
    "bitsandbytes>=0.41",
    "rouge_score>=0.1.2",
    "deepspeed>=0.10",
]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freqkv_ext"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"
